changed button color

--- a/src/style.css
+++ b/src/style.css
@@ -85,7 +85,7 @@ html {
 
 button {
     padding: 10px 20px;
-    background-color: #007bff;
+    background-color: #68adf6;
     color: white;
     border: 1px solid #000000;
 
