--- a/src/style.css
+++ b/src/style.css
@@ -162,12 +162,11 @@ button:hover {
     border: 1px solid black;
 }
 
-.sidePanel {
+.sidePanel,
+.selectedPanel {
     font: 400 normal 1 "Nanum Myeongjo", serif;
     position: fixed;
     top: 0;
-    left: -500px;
-    /* makes it so the sidepanel isnt visible at first*/
     width: 300px;
     height: 100%;
     background-color: #f2f2f2;
@@ -177,13 +176,26 @@ button:hover {
     transition: left 0.3s ease;
 }
 
+.sidePanel {
+    left: -500px; /* hides the side panel initially */
+}
+
+.selectedPanel {
+    right: -500px; /* hides the selected panel initially */
+}
+
+.selectedPanel.show {
+     /*selectedPanel becomes visible*/
+    right: 0;
+}
+
 .sidePanel.show {
     /*sidepanel becomes visible*/
     left: 0;
 }
 
 
-.sidePanel h3 {
+.sidePanel h3, .selectedPanel h3 {
     font: 500 normal 1 "Nanum Myeongjo", serif;
     margin:0;
     position: sticky;
@@ -215,4 +227,25 @@ button:hover {
 
 .sidePanel li:hover {
     background-color: #ddd;
+}
+
+.selectedPanel ul {
+    list-style-type: none;
+    padding: 0;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.selectedPanel li {
+    margin-bottom: 10px;
+    cursor: pointer;
+    border: 1px solid #000000;
+    padding: 10px;
+    border-radius: 5px;
+    background-color:#ecf5fc;
+}
+
+.selectedPanel button {
+    margin: auto; /* Center the button horizontally and vertically within the panel */
+    display: block; /* Make the button a block element */
 }
